atualização de texto

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <head>
     <title>site da Denise</title>
+    <styl> 
+        body{background -color:}
+        color:
+        <text-aling:center;
+</styl>
 </head>
 </body>
 <h1>meu primeiro site online</h1>
