--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <title>site da Denise</title>
     <styl> 
-        body{background -color:}
+        body{
+            background -color:}
+    
         color:
         <text-aling:center;
+    }
+    h1{
+        text-aling:center;
+    }
+p{text-aling:right
+}
 </styl>
 </head>
 </body>
@@ -23,4 +31,6 @@
     <li>VSCode</li>
 
 </ol>
-</body </html>
+<img src="https://images.pexels.com/photos/30241292/pexels-photo-30241292.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
+</body 
+</html>
